add profile photo

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -775,6 +775,10 @@ input, select, textarea {
 
 /* Actions */
 
+	#profile-pic {
+		width: fit-content;
+	}
+
 	ul.actions {
 		display: -moz-flex;
 		display: -webkit-flex;
