--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -776,7 +776,10 @@ input, select, textarea {
 /* Actions */
 
 	#profile-pic {
-		width: fit-content;
+		width: 5.5rem;
+    height: 5.5rem;
+    border-radius: 50%;
+    border: solid 1px #ffffff;
 	}
 
 	ul.actions {
@@ -1316,7 +1319,7 @@ input, select, textarea {
 			width: 5.5rem;
 			height: 5.5rem;
 			line-height: 5.5rem;
-			border: solid 1px #ffffff;
+			/* border: solid 1px #ffffff; */
 			border-radius: 100%;
 		}
 
